--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
   "plugins": ["react", "babel"],
   "rules": {
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "react/no-render-return-value": "off"
   },
   "settings": {
     "react": {
