--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,12 +18,15 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "babel"],
+  "plugins": ["react", "babel", "react-hooks"],
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "react/no-render-return-value": "off",
-    "no-unused-vars": "warn"
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "no-unused-vars": "warn",
+    "no-console": "warn"
   },
   "settings": {
     "react": {
