--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
+    "error-overlay-webpack-plugin": "^0.2.0",
     "flow-bin": "^0.98.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
