--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "css-loader": "^2.1.1",
     "error-overlay-webpack-plugin": "^0.2.0",
     "flow-bin": "^0.98.0",
+    "flow-typed": "^2.5.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "style-loader": "^0.23.1",
