--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "test": "jest --watch",
-    "flow": "flow",
-    "storybook": "start-storybook"
+    "flow": "flow"
   },
   "dependencies": {
     "react": "^16.8.6",
@@ -28,7 +27,6 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@hot-loader/react-dom": "^16.8.6",
-    "@storybook/react": "^5.1.3",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
