--- a/package.json
+++ b/package.json
@@ -1,51 +1,28 @@
 {
   "name": "react-starter",
   "version": "0.1.0",
-  "description": "React starter kit",
+  "description": "My react starter kit",
   "main": "index.js",
-  "author": "Arpad Illyes",
+  "repository": "git@github.com:arpi17/react-starter.git",
+  "author": "Arpad Illyes <arpadillyes93@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
-    "test": "jest --watch",
-    "flow": "flow"
+    "serve": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.12.8",
-    "styled-components": "^4.3.2"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
+    "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@hot-loader/react-dom": "^16.8.6",
-    "babel-jest": "^24.7.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-styled-components": "^1.10.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.1.0",
-    "error-overlay-webpack-plugin": "^0.4.0",
-    "flow-bin": "^0.103.0",
-    "flow-typed": "^2.6.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.7.1",
-    "style-loader": "^0.23.1",
+    "babel-loader": "^8.0.6",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
   }
 }
