--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.1.0",
+    "error-overlay-webpack-plugin": "^0.4.0",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
