--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "private": true,
   "scripts": {
     "serve": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
-    "flow": "flow"
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "react": "^16.8.6",
@@ -21,7 +20,6 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
@@ -29,7 +27,6 @@
     "css-loader": "^3.2.0",
     "error-overlay-webpack-plugin": "^0.4.0",
     "file-loader": "^4.1.0",
-    "flow-bin": "^0.104.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.1",
